# vkr-2021

./: .gitattributes  .gitignore  CMakeLists.txt  CMakeLists.txt.user.0abda7d  CMakeLists.txt.user.8719dff  CMakeLists.txt.user.9a88bac  CMakeLists.txt.user.edc6f4e  Makefile  README.md  shell.nix
STATISTICA REPORT/: Thumbs.db
STATISTICA REPORT/before deletion/: workbooklatest.htm
STATISTICA REPORT/before deletion/Documents/: Workbook1.stw  Workbook8_(Recovered).stw  priv.ppk  pub  workbookr3.spf
STATISTICA REPORT/before deletion/us_col.std/: COLLEGES.DOC  PRIVATE.STA  PUBLIC.STA  USNEWS.DOC  USNEWS.DOC:Zone.Identifier:$DATA
STATISTICA REPORT/before deletion/workbooklatest_files/: macro1.htm  report1.htm  ss10.htm  ss11.htm  ss12.htm  ss14.htm  ss15.htm  ss16.htm  ss17.htm  ss18.htm  ss19.htm  ss2.htm  ss20.htm  ss21.htm  ss22.htm  ss23.htm  ss24.htm  ss25.htm  ss26.htm  ss27.htm  ss28.htm  ss3.htm  ss4.htm  ss5.htm  ss6.htm  ss7.htm  ss8.htm  ss9.htm
app/: CMakeLists.txt  main.cpp
doc/: preamble.tex  ref.bib  thesis.dvi  thesis.tex  thesis.tex.bkp
doc/Slides_comments/: talk.dvi  talk.nav  talk.tex
doc/pres/: main.dvi  main.pdf.edited  main.tex  new.txt  zip.sh
doc/thesis/: preamble.tex  ref.bib  thesis.tex  title.en.tex  title.ru.tex
lib/: CMakeLists.txt
lib/mymath/: CMakeLists.txt  mymath.cpp
lib/mymath/include/: mymath.hpp
windata/: clean.bat  compile.bat  run.bat
windata/w64devkit/: activate.bat  compile.sh
windata/w64devkit/include/: bfd_stdint.h  gmp.h
windata/w64devkit/lib/: libbfd.la  libctf-nobfd.la  libctf.la
(+39 files in other folders)
